Avoid layout shift from the logo image
* The img alt text doesn't respect the img CSS, so add a wrapping
  div and style it exactly for the expected result

--- a/doc/_static/my_theme.css
+++ b/doc/_static/my_theme.css
@@ -2,6 +2,16 @@
     max-width: 1000px !important;
 }
 
+.logo_container {
+    display: block;
+    margin: 0 auto;
+    border: 0;
+    border-radius: 0;
+    max-width: 100%;
+    width: 217.633px;
+    height: 208.533px;
+}
+
 .sd-col {
     margin-bottom: 2rem;
 }
